--- a/index.html
+++ b/index.html
@@ -90,6 +90,83 @@
 </div>
 <button id="añadir">añadir</button>
 <button id="quitar">quitar</button>
+<div id="formulario"></div>
+<button id="genera">Generar formulario</button>
+<button id="mostrar">Mostrar</button>
+
+<p class="parraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan nulla sed lorem pulvinar
+    laoreet. Donec feugiat, augue in maximus feugiat, libero enim consequat justo, a mattis orci sapien in purus.
+    Morbi id tortor at metus dignissim congue non porta massa. Fusce in nibh sed velit tristique bibendum sit amet
+    eu justo</p>
+<table>
+    <tr>
+        <td>
+            <p class="parraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan nulla sed
+                lorem pulvinar laoreet. Donec feugiat, augue in maximus feugiat, libero enim consequat justo, a
+                mattis orci sapien in purus. Morbi id tortor at metus dignissim congue non porta massa. Fusce in
+                nibh sed velit tristique bibendum sit amet eu justo</p>
+        </td>
+        <td>
+            <p class="parraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan nulla sed
+                lorem pulvinar laoreet. Donec feugiat, augue in maximus feugiat, libero enim consequat justo, a
+                mattis orci sapien in purus. Morbi id tortor at metus dignissim congue non porta massa. Fusce in
+                nibh sed velit tristique bibendum sit amet eu justo</p>
+        </td>
+    </tr>
+</table>
+<a href="">Enlace 1</a>
+<a href="">Enlace 2</a>
+<a href="">Enlace 3</a> <br />
+<span id="coordenadas"></span>
+<table id="tabla2">
+    <tr>
+        <td>
+            <p class="parraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan nulla sed
+                lorem pulvinar laoreet. Donec feugiat, augue in maximus feugiat, libero enim consequat justo, a
+                mattis orci sapien in purus. Morbi id tortor at metus dignissim congue non porta massa. Fusce in
+                nibh sed velit tristique bibendum sit amet eu justo</p>
+        </td>
+        <td>
+            <p class="parraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan nulla sed
+                lorem pulvinar laoreet. Donec feugiat, augue in maximus feugiat, libero enim consequat justo, a
+                mattis orci sapien in purus. Morbi id tortor at metus dignissim congue non porta massa. Fusce in
+                nibh sed velit tristique bibendum sit amet eu justo</p>
+        </td>
+    </tr>
+</table>
+<div id="divAmarillo">
+</div>
+<input type="text" class="control" value="Buscar...">
+<input type="text" class="control2" value="texto de input1">
+<input type="text" class="control2" value="texto de input2">
+
+<ul id="listaItem">
+    <li>
+        item1
+    </li>
+    <li>
+        item2
+    </li>
+    <li>
+        item3
+    </li>
+</ul>
+
+<p id="cuadroTexto">parrafo del ejercicio 19</p>
+<button id="fadinLento">adios</button> <br />
+
+<button id="unfadingVeloz">Hola amigos</button> <br />
+
+<button id="fading">Fade out</button><br />
+
+<button id="unfading">Fade in</button> <br />
+
+<button id="transparentar">transparentar</button><br />
+
+<button id="opacar">opacar</button>
+
+<p>hkjfñkgjjk</p>
+<p>siguiente</p>
 <script src="js/jquery.js"></script>
 </body>
 </html>
